# image-mcp-gen

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: renovate.json
.github/workflows/: renovate.yml
src/: server.py
